# byte-stuffing-tryouts

./: .clang-format  CMakeLists.txt  README.md  main.c
rle/: README.md  rle.c  rle.h  rletest.c
tcobs/: commit_hash.txt
